--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "start": "NODE_ENV=production node .",
     "lint": "yarn tslint --project . --fix",
     "format": "yarn prettier --write .",
-    "test": "NODE_ENV=test yarn jest"
+    "test": "NODE_ENV=test yarn jest",
+    "generate-advisors": "ts-node ./generator/generate-advisors.ts >> ./data/advisors.json"
   },
   "lint-staged": {
     "*.{ts}": [
