--- a/server/package.json
+++ b/server/package.json
@@ -38,12 +38,14 @@
     "@types/express": "^4.17.9",
     "@types/faker": "^5.1.4",
     "@types/node": "^14.14.8",
+    "@types/supertest": "^2.0.10",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
