--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
     "axios-hooks": "^1.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.6",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5"
   },
@@ -34,12 +36,15 @@
     "@types/jest": "^26.0.3",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
     "@types/styled-components": "^5.1.0",
     "@types/styled-system": "^5.1.9",
     "axios-mock-adapter": "^1.18.1",
     "prettier": "^2.0.5",
     "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.13.1",
+    "tslint-react": "^5.0.0",
     "typescript": "^4.0.5"
   }
 }
