--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,23 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+# editors
 /.vscode
 
 # dependencies
 /node_modules
 
-# testing
-/coverage
-
 # production
 /build
 
+# configuration
+.env
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
