--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,23 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "yarn tslint --project . --fix",
+    "format": "yarn prettier --write ."
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "yarn format",
+      "yarn lint"
+    ],
+    "*.{json,yaml,md}": [
+      "yarn format"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "proxy": "http://localhost:3001",
   "browserslist": {
@@ -34,17 +50,19 @@
   "devDependencies": {
     "@testing-library/react-hooks": "^3.3.0",
     "@types/jest": "^26.0.3",
-    "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
+    "@types/react": "^16.9.38",
     "@types/styled-components": "^5.1.0",
     "@types/styled-system": "^5.1.9",
-    "axios-mock-adapter": "^1.18.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "prettier": "^2.0.5",
     "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.13.1",
     "tslint-react": "^5.0.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.0.5"
   }
 }
