--- a/client/package.json
+++ b/client/package.json
@@ -48,21 +48,23 @@
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^3.3.0",
+    "@testing-library/react-hooks": "^3.7.0",
+    "@types/axios-mock-adapter": "^1.10.0",
     "@types/jest": "^26.0.3",
+    "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
-    "@types/react": "^16.9.38",
     "@types/styled-components": "^5.1.0",
     "@types/styled-system": "^5.1.9",
+    "axios-mock-adapter": "^1.19.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.0.5",
     "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.13.1",
-    "tslint-react": "^5.0.0",
     "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
     "typescript": "^4.0.5"
   }
 }
